<resources>
    <string name="app_name">V-Browser</string>

    <!-- PIN ENTRY STRINGS -->
    <string name="zero">0</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="exit">Exit</string>
    <string name="backspace">Backspace</string>
    <string name="image_content_description">null</string>
    <string name="confirm_pin">Please confirm your new pin by entering it again.</string>

    <!-- Browser Strings -->
    <string name="forward_button">Forward</string>
    <string name="back_button">Back</string>
    <string name="overflow_button">Overflow</string>
    <string name="refresh_button">Refresh</string>

    <!-- Other -->
    <string name="sample_text">sample</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="action_home">Home</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
